# backend-labs

./: README.md
fastapi/01_fastapi-router/: README.md  pyproject.toml
fastapi/01_fastapi-router/01_fastapi_router/: db.py  main.py
fastapi/01_fastapi-router/01_fastapi_router/routers/: Books.py
fastapi/01_fastapi-router/01_fastapi_router/schemas/: Book.py
fastapi/02_fastapi_TaskManager/02_fastapi_taskmanager/: main.py  opr_csv.py  task.csv
fastapi/03_fastapi_security/: README.md  pyproject.toml
fastapi/03_fastapi_security/03_fastapi_security/: Responses.py  api_key.py  auth_utils.py  database.db  database.py  github_auth_operations.py  github_login.py  main.py  mfa.py  models.py  operations.py  premium_access.py  rbac.py  test_operations.py  user_session.py
fastapi/04_fastapi-test-traffic/: README.md  locustfile.py  pyproject.toml
fastapi/04_fastapi-test-traffic/fastapi_test_traffic/: main.py
fastapi/04_fastapi_TaskManager/: README.md  pyproject.toml
fastapi/04_fastapi_TaskManager/04_fastapi_taskmanager/: routers.py  schemas.py  try.py
fastapi/05_fastapi-webhook/: README.md  pyproject.toml
fastapi/05_fastapi-webhook/05_fastapi_webhook/: asgi_middleware.py  main.py  webhook.py
