[tool.poetry]
name = "01-fastapi-router"
version = "0.1.0"
description = ""
authors = ["def0ultbug <youssefmahfoudh185@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
